# ricochet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-http-callback-server/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-dns-external-callbacks/: 03-01-PLAN.md  03-01-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ricochet/: __init__.py  __main__.py  cli.py
ricochet/core/: __init__.py  correlation.py  store.py
ricochet/injection/: __init__.py  crawler.py  http_client.py  injector.py  parser.py  payloads.py  rate_limiter.py  vectors.py
ricochet/output/: __init__.py  finding.py  formatters.py
ricochet/payloads/: __init__.py  polyglot.py  sqli.py  ssti.py  xss.py
ricochet/reporting/: __init__.py  generator.py  templates.py
ricochet/server/: __init__.py  dns.py  http.py
ricochet/triggers/: __init__.py  active.py  polling.py  suggestions.py
ricochet/utils/: __init__.py
tests/: test_payloads_integration.py  test_payloads_polyglot.py  test_payloads_sqli.py  test_payloads_ssti.py  test_payloads_xss.py  test_reporting.py  test_triggers_active.py  test_triggers_polling.py  test_triggers_suggestions.py  test_xss_metadata.py
(+57 files in other folders)
