[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ricochet"
version = "1.0.0"
description = "Second-order vulnerability detection for bug bounty hunters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "invaen"}
]
keywords = ["security", "bug-bounty", "xss", "sqli", "ssti", "vulnerability", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = []  # Zero external dependencies

[project.urls]
Homepage = "https://github.com/invaen/ricochet"
Repository = "https://github.com/invaen/ricochet"
Issues = "https://github.com/invaen/ricochet/issues"

[project.scripts]
ricochet = "ricochet.cli:main"

[tool.setuptools.packages.find]
include = ["ricochet*"]
